# elastic-eleonor

./: LICENSE  README.md  setupproject.sh
src/: CMakeLists.txt  crtest.cpp
